--- a/challenge.html
+++ b/challenge.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <section class="caja">
-        <div class="cuadrado__uno">
+        <div class="cuadrado__1">
             <span class="text__main">Cuadrado 1</span>
         </div>
         <div class="cuadrado__2">
